--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "@supabase/supabase-js": "^2.31.0"
+    "@supabase/supabase-js": "^2.31.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
-    "vite": "^4.5.0"
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
